SecurityConfig.java Updated